# onedrive-safe-xlsx

./: .gitignore  CITATION.cff  NOTICE  README.md  onedrive_safe_xlsx.py  pyproject.toml  test_onedrive_safe_xlsx.py
.github/workflows/: publish.yml  test.yml
